--- a/src/core/FlaimProvider/FlaimWrapper/FlaimWrapper.vcproj
+++ b/src/core/FlaimProvider/FlaimWrapper/FlaimWrapper.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="FlaimWrapper"
 	ProjectGUID="{188191A2-3D4D-404E-8F66-A1FAB865F586}"
 	RootNamespace="FlaimWrapper"
@@ -9,6 +9,9 @@
 	<Platforms>
 		<Platform
 			Name="Win32"
+		/>
+		<Platform
+			Name="x64"
 		/>
 	</Platforms>
 	<ToolFiles>
@@ -118,6 +121,109 @@
 			/>
 		</Configuration>
 		<Configuration
+			Name="Release|x64"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory=".\Release"
+			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="3"
+				TypeLibraryName=".\Release/FlaimWrapper.tlb"
+				HeaderFileName=""
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="2"
+				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories="$(SolutionDir)..\..\dependencies\external\libflaim\win64"
+				PreprocessorDefinitions="WIN64;_WIN64;NDEBUG;_WINDOWS;_USRDLL;FLAIMWRAPPER_EXPORTS;WINDOWS"
+				StringPooling="true"
+				RuntimeLibrary="0"
+				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderThrough="stdafx.h"
+				PrecompiledHeaderFile=".\Release/FlaimWrapper.pch"
+				AssemblerListingLocation=".\Release/"
+				ObjectFile=".\Release/"
+				ProgramDataBaseFileName=".\Release/"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+				DebugInformationFormat="3"
+				CompileAs="0"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="rpcrt4.lib ws2_32.lib odbc32.lib odbccp32.lib flm.lib msvcrt.lib"
+				OutputFile=".\Release/FlaimWrapper.dll"
+				Version="3.7.1.20"
+				LinkIncremental="1"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)..\..\dependencies\external\libflaim\win64&quot;"
+				ManifestFile="$(IntDir)\$(TargetFileName).manifest"
+				IgnoreDefaultLibraryNames="LIBCMT.lib"
+				ProgramDatabaseFile=".\Release/FlaimWrapper.pdb"
+				ImportLibrary=".\Release/FlaimWrapper.lib"
+				TargetMachine="17"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+				AssemblyIdentity=""
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				CommandLine="if not exist C:\iFolder_stage mkdir C:\iFolder_stage&#x0D;&#x0A;if not exist C:\iFolder_stage\lib mkdir C:\iFolder_stage\lib&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias mkdir C:\iFolder_stage\lib\simias&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web mkdir C:\iFolder_stage\lib\simias\web&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin mkdir C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;if not exist C:\iFolder_stage\etc mkdir C:\iFolder_stage\etc&#x0D;&#x0A;if not exist C:\iFolder_stage\etc\simias mkdir C:\iFolder_stage\etc\simias&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName) C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName).manifest C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;if exist $(IntDir)\$(TargetName).pdb copy $(IntDir)\$(TargetName).pdb C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;xcopy /I/E/Y &quot;$(VCInstallDir)redist\amd64\Microsoft.VC80.MFCLOC&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\Microsoft.VC80.MFCLOC&quot;&#x0D;&#x0A;xcopy /I/E/Y &quot;$(VCInstallDir)redist\amd64\Microsoft.VC80.MFC&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\Microsoft.VC80.MFC&quot;&#x0D;&#x0A;xcopy /I/E/Y &quot;$(VCInstallDir)redist\amd64\Microsoft.VC80.CRT&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\Microsoft.VC80.CRT&quot;&#x0D;&#x0A;"
+			/>
+		</Configuration>
+		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory=".\Debug"
@@ -218,6 +324,107 @@
 				CommandLine="if not exist C:\iFolder_stage mkdir C:\iFolder_stage&#x0D;&#x0A;if not exist C:\iFolder_stage\lib mkdir C:\iFolder_stage\lib&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias mkdir C:\iFolder_stage\lib\simias&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web mkdir C:\iFolder_stage\lib\simias\web&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin mkdir C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin\FlaimLib mkdir C:\iFolder_stage\lib\simias\web\bin\FlaimLib&#x0D;&#x0A;if not exist C:\iFolder_stage\etc mkdir C:\iFolder_stage\etc&#x0D;&#x0A;if not exist C:\iFolder_stage\etc\simias mkdir C:\iFolder_stage\etc\simias&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName) C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName) C:\iFolder_stage\lib\simias\web\bin\FlaimLib&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName).intermediate.manifest C:\iFolder_stage\lib\simias\web\bin\FlaimLib&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT mkdir C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC mkdir C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugCRT\Microsoft.VC80.DebugCRT.manifest&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugCRT\msvcm80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugCRT\msvcp80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugCRT\msvcr80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugMFC\Microsoft.VC80.DebugMFC.manifest&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugMFC\mfc80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugMFC\mfc80ud.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugMFC\mfcm80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\x86\Microsoft.VC80.DebugMFC\mfcm80ud.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;if exist $(IntDir)\$(TargetName).pdb copy $(IntDir)\$(TargetName).pdb C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;"
 			/>
 		</Configuration>
+		<Configuration
+			Name="Debug|x64"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="3"
+				TypeLibraryName=".\Debug/FlaimWrapper.tlb"
+				HeaderFileName=""
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)..\..\dependencies\external\libflaim\&quot;"
+				PreprocessorDefinitions="WIN64;_WIN64;DEBUG;_DEBUG;_WINDOWS;_USRDLL;FLAIMWRAPPER_EXPORTS"
+				ExceptionHandling="1"
+				BasicRuntimeChecks="0"
+				RuntimeLibrary="1"
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderThrough=""
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation=".\Debug/"
+				ObjectFile=".\Debug/"
+				ProgramDataBaseFileName=".\Debug/"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+				DebugInformationFormat="3"
+				CompileAs="0"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="rpcrt4.lib ws2_32.lib imagehlp.lib flaim.lib msvcrtd.lib"
+				OutputFile=".\Debug/FlaimWrapper.dll"
+				LinkIncremental="2"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)..\..\dependencies\external\libflaim\win32&quot;"
+				IgnoreDefaultLibraryNames="LIBCMTD.lib"
+				GenerateDebugInformation="true"
+				ProgramDatabaseFile=".\Debug/FlaimWrapper.pdb"
+				ImportLibrary=".\Debug/FlaimWrapper.lib"
+				TargetMachine="17"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+				AssemblyIdentity="FlaimWrapper"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				CommandLine="if not exist C:\iFolder_stage mkdir C:\iFolder_stage&#x0D;&#x0A;if not exist C:\iFolder_stage\lib mkdir C:\iFolder_stage\lib&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias mkdir C:\iFolder_stage\lib\simias&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web mkdir C:\iFolder_stage\lib\simias\web&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin mkdir C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin\FlaimLib mkdir C:\iFolder_stage\lib\simias\web\bin\FlaimLib&#x0D;&#x0A;if not exist C:\iFolder_stage\etc mkdir C:\iFolder_stage\etc&#x0D;&#x0A;if not exist C:\iFolder_stage\etc\simias mkdir C:\iFolder_stage\etc\simias&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName) C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName) C:\iFolder_stage\lib\simias\web\bin\FlaimLib&#x0D;&#x0A;copy $(IntDir)\$(TargetFileName).intermediate.manifest C:\iFolder_stage\lib\simias\web\bin\FlaimLib&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT mkdir C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&#x0D;&#x0A;if not exist C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC mkdir C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugCRT\Microsoft.VC80.DebugCRT.manifest&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugCRT\msvcm80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugCRT\msvcp80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugCRT\msvcr80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugCRT&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugMFC\Microsoft.VC80.DebugMFC.manifest&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugMFC\mfc80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugMFC\mfc80ud.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugMFC\mfcm80d.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;copy &quot;$(VCInstallDir)redist\Debug_NonRedist\amd64\Microsoft.VC80.DebugMFC\mfcm80ud.dll&quot; &quot;C:\iFolder_stage\lib\simias\web\bin\FlaimLib\Microsoft.VC80.DebugMFC&quot;&#x0D;&#x0A;if exist $(IntDir)\$(TargetName).pdb copy $(IntDir)\$(TargetName).pdb C:\iFolder_stage\lib\simias\web\bin&#x0D;&#x0A;"
+			/>
+		</Configuration>
 	</Configurations>
 	<References>
 	</References>
@@ -248,7 +455,28 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release|x64"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_MBCS;_USRDLL;FLAIMWRAPPER_EXPORTS;$(NoInherit)"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="0"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_MBCS;_USRDLL;FLAIMWRAPPER_EXPORTS"
+						BasicRuntimeChecks="3"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|x64"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -273,7 +501,28 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release|x64"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_MBCS;_USRDLL;FLAIMWRAPPER_EXPORTS;$(NoInherit)"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="0"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_MBCS;_USRDLL;FLAIMWRAPPER_EXPORTS"
+						BasicRuntimeChecks="3"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|x64"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -298,7 +547,28 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Release|x64"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_MBCS;_USRDLL;FLAIMWRAPPER_EXPORTS;$(NoInherit)"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="0"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_MBCS;_USRDLL;FLAIMWRAPPER_EXPORTS"
+						BasicRuntimeChecks="3"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|x64"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
